Component-Grid: Stop basic grid cols from becoming too wide with wide pre content (#537)

--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -100,6 +100,7 @@
             %col-flex-basic-#{$breakpoint} {
                 flex-basis: 0;
                 flex-grow: 1;
+                min-width: 0;
                 max-width: 100%;
             }
 
